# renta-open-source

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  README.md  pyproject.toml
moshin_backend/: example.env  export_env.py  payload.json  schema.yaml  schema.yml
moshin_backend/api/authentication/: apps.py  urls.py  validators.py
moshin_backend/api/authentication/serializers/: __init__.py  admin.py  refresh.py  renter.py  response.py
moshin_backend/api/authentication/services/: auth_service.py
moshin_backend/api/authentication/views/: __init__.py  login.py  login_base.py  login_refresh.py  login_register.py
moshin_backend/api/bookings/: apps.py  signals.py  urls.py
moshin_backend/api/bookings/admin/: admin.py  forms.py
moshin_backend/api/bookings/migrations/: 0001_initial.py  0002_deposit.py  0003_booking_deposit.py  0004_booking_return_pickup_address_and_more.py  (+8 more)
moshin_backend/api/cars/: admin.py  forms.py  urls.py  validators.py
moshin_backend/api/driverlicenses/: admin.py  apps.py  urls.py
moshin_backend/api/locations/: admin.py  urls.py
moshin_backend/api/notifications/: admin.py  consumers.py  routing.py  tasks.py  urls.py
moshin_backend/api/passports/: admin.py  apps.py  urls.py  validators.py
moshin_backend/api/payments/: admin.py  apps.py  services.py  urls.py
moshin_backend/api/promo/: admin.py  apps.py  filter.py  urls.py
moshin_backend/api/referral/: admin.py  apps.py  urls.py
moshin_backend/api/users/: exeptions.py  filter.py  permissions.py  urls.py  validators.py
moshin_backend/api/validate_uz/: admin.py  apps.py  models.py  serializers.py  tasks.py
moshin_backend/api/version_control/: apps.py  models.py  serializers.py  urls.py  views.py
moshin_backend/common/: age.py  constants.py  exeptions.py  files.py  filter.py  pagination.py  permissions.py  validators.py
moshin_backend/common/documents/: __init__.py  constants.py  mixins.py  models.py  serializers.py  tasks.py  validators.py
moshin_backend/common/models/: __init__.py  base.py
moshin_backend/common/otp_service/: __init__.py  core.py  eskiz_integration.py  exeptions.py  interface.py  tasks.py
moshin_backend/core/: asgi.py  settings.py  urls.py
moshin_backend/firebase/: notification.py
(+160 files in other folders)
